--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -10,31 +10,6 @@ jobs:
         os: [ubuntu-20.04]
         compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
         CUDA: ['0', '6.5', '8.0', '11.0']
-        include:
-          - os: ubuntu-16.04
-            compiler: g++-7
-            CUDA: '0'
-          - os: ubuntu-16.04
-            compiler: g++-8
-            CUDA: '0'
-          - os: ubuntu-16.04
-            compiler: g++-9
-            CUDA: '0'
-          - os: ubuntu-16.04
-            compiler: clang++-8
-            CUDA: '0'
-          - os: ubuntu-16.04
-            compiler: clang++-9
-            CUDA: '0'
-          - os: ubuntu-16.04
-            compiler: g++-7
-            CUDA: '6.5'
-          - os: ubuntu-16.04
-            compiler: g++-7
-            CUDA: '8.0'
-          - os: ubuntu-16.04
-            compiler: g++-7
-            CUDA: '11.0'
 
     runs-on: ${{ matrix.os }}
 
@@ -42,6 +17,22 @@ jobs:
       CUDA_ROOT: '/usr/local/cuda'
 
     steps:
+    - name: Install g++-7
+      if: matrix.compiler == 'g++-7'
+      run: |
+        sudo apt install g++-7
+    - name: Install g++-8
+      if: matrix.compiler == 'g++-8'
+      run: |
+        sudo apt install g++-8
+    - name: Install clang++-8
+      if: matrix.compiler == 'clang++-8'
+      run: |
+        sudo apt install clang-8
+    - name: Install clang++-9
+      if: matrix.compiler == 'clang++-9'
+      run: |
+        sudo apt install clang-9
     - uses: actions/checkout@v2
       with:
         fetch-depth: '0'
@@ -115,7 +106,7 @@ jobs:
         name: FIRESTARTER-linux
         path: build/src/FIRESTARTER
     - uses: actions/upload-artifact@v2
-      if: matrix.os == 'ubuntu-16.04' && matrix.CUDA != '0'
+      if: matrix.compiler == 'clang++-10' && matrix.CUDA != '0'
       with:
         name: FIRESTARTER_CUDA_${{ matrix.CUDA }}-linux
         path: build/src/FIRESTARTER_CUDA
