--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -9,7 +9,7 @@ jobs:
       matrix:
         os: [ubuntu-20.04]
         compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
-        CUDA: ['0', '6.5', '8.0', '11.0']
+        CUDA: ['0', '8.0', '11.0']
 
     runs-on: ${{ matrix.os }}
 
@@ -40,11 +40,6 @@ jobs:
       if: matrix.CUDA != '0'
       run: |
         case ${{ matrix.CUDA }} in
-          6.5)
-            wget http://developer.download.nvidia.com/compute/cuda/6_5/rel/installers/cuda_6.5.14_linux_64.run
-            sudo sh cuda_6.5.14_linux_64.run -extract=${CUDA_ROOT}
-            sudo sh ${CUDA_ROOT}/cuda-linux64-rel-6.5.14-18749181.run --tar mxvf -C ${CUDA_ROOT}
-            ;;
           8.0)
             wget https://developer.nvidia.com/compute/cuda/8.0/Prod2/local_installers/cuda_8.0.61_375.26_linux-run
             wget https://developer.nvidia.com/compute/cuda/8.0/Prod2/patches/2/cuda_8.0.61.2_linux-run
@@ -269,17 +264,6 @@ jobs:
         mv FIRESTARTER/FIRESTARTER FIRESTARTER-linux
         rm -rf FIRESTARTER
         chmod +x FIRESTARTER-linux
-    # Linux CUDA 6.5
-    - name: Retrieve FIRESTARTER_CUDA_6.5-linux 
-      uses: actions/download-artifact@v2
-      with:
-        name: FIRESTARTER_CUDA_6.5-linux
-        path: FIRESTARTER
-    - name: Move binary to right directory
-      run: |
-        mv FIRESTARTER/FIRESTARTER_CUDA FIRESTARTER_CUDA_6.5
-        rm -rf FIRESTARTER
-        chmod +x FIRESTARTER_CUDA_6.5
     # Linux CUDA 8.0
     - name: Retrieve FIRESTARTER_CUDA_8.0-linux 
       uses: actions/download-artifact@v2
