--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -9,7 +9,7 @@ jobs:
       matrix:
         os: [ubuntu-20.04]
         compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
-        CUDA: ['0', '8.0', '11.0']
+        CUDA: ['0', '8.0', '11.0', 'NVHPC-22.5']
 
     runs-on: ${{ matrix.os }}
 
@@ -51,6 +51,13 @@ jobs:
             wget https://developer.download.nvidia.com/compute/cuda/11.0.3/local_installers/cuda_11.0.3_450.51.06_linux.run
             sudo sh cuda_11.0.3_450.51.06_linux.run --toolkit --toolkitpath=${CUDA_ROOT} --override --silent
             ;;
+          NVHPC-22.5)
+            wget https://developer.download.nvidia.com/hpc-sdk/22.5/nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
+            tar xpzf nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
+            export NVHPC_SILENT="true"
+            export NVHPC_INSTALL_DIR="${CUDA_ROOT}"
+            export NVHPC_INSTALL_TYPE="single"
+            sudo ./nvhpc_2022_225_Linux_x86_64_cuda_11.7/install
         esac
     - name: Create build directory
       run: |
@@ -171,7 +178,9 @@ jobs:
       if: matrix.cfg.CUDA == '0' && matrix.cfg.MSVC == false
       with:
         name: FIRESTARTER-windows
-        path: build\src\FIRESTARTER.exe
+        path: |
+          build\src\FIRESTARTER.exe
+          build\src\libhwloc-15.dll
   build-macos:
     strategy:
       fail-fast: false
