--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -8,8 +8,10 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04]
-        compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
-        CUDA: ['0', '8.0', '11.0', 'NVHPC-22.5']
+          #compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
+        compiler: [g++-10]
+          #CUDA: ['0', '8.0', '11.0', 'NVHPC-22.5']
+        CUDA: ['NVHPC-22.5']
           #CUDA: ['0', '8.0', '11.0']
 
     runs-on: ${{ matrix.os }}
@@ -58,6 +60,9 @@ jobs:
             export NVHPC_SILENT="true"
             export NVHPC_INSTALL_DIR="${CUDA_ROOT}"
             export NVHPC_INSTALL_TYPE="single"
+            echo $NVHPC_SILENT
+            echo $NVHPC_INSTALL_DIR
+            echo $NVHPC_INSTALL_TYPE
             sudo ./nvhpc_2022_225_Linux_x86_64_cuda_11.7/install
         esac
     - name: Create build directory
