--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -57,16 +57,13 @@ jobs:
           NVHPC-22.5)
             wget https://developer.download.nvidia.com/hpc-sdk/22.5/nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
             tar xpzf nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
-            sudo export NVHPC_SILENT="true"
-            sudo export NVHPC_INSTALL_DIR="${CUDA_ROOT}"
-            sodo export NVHPC_INSTALL_TYPE="single"
+            export NVHPC_SILENT="true"
+            export NVHPC_INSTALL_DIR="${CUDA_ROOT}"
+            export NVHPC_INSTALL_TYPE="single"
             echo $NVHPC_SILENT
             echo $NVHPC_INSTALL_DIR
             echo $NVHPC_INSTALL_TYPE
-            sudo echo $NVHPC_SILENT
-            sudo echo $NVHPC_INSTALL_DIR
-            sudo echo $NVHPC_INSTALL_TYPE
-            sudo ./nvhpc_2022_225_Linux_x86_64_cuda_11.7/install
+            sudo NVHPC_SILENT="true" NVHPC_INSTALL_DIR="$CUDA_ROOT" NVHPC_INSTALL_TYPE="single" ./nvhpc_2022_225_Linux_x86_64_cuda_11.7/install
         esac
     - name: Create build directory
       run: |
