--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -98,9 +98,10 @@ jobs:
       run: |
         NVARCH=`uname -s`_`uname -m`; export NVARCH
         PATH=$CUDA_ROOT/$NVARCH/22.5/compilers/bin:$PATH; export PATH
+        LD_LIBRARY_PATH=$CUDA_ROOT/$NVARCH/22.5/compilers/lib:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
 
         cd build
-        cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" ..
+        cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -LA ..
     - name: Build
       run: |
         cd build
