--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -103,8 +103,7 @@ jobs:
         LD_LIBRARY_PATH=$CUDA_ROOT/$NVARCH/22.5/cuda/11.7/lib64/stubs:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
 
         cd build
-        #cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCMAKE_EXE_LINKER_FLAGS="-L${CUDA_ROOT}/$NVARCH/22.5/compilers/lib" -LA ..
-        cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -LA ..
+        cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCMAKE_EXE_LINKER_FLAGS=-L"$CUDA_ROOT/$NVARCH/22.5/cuda/11.7/lib64/stubs" -LA ..
     - name: Build
       run: |
         cd build
