--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -8,7 +8,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04]
-        compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
+        compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10, icx-2024.0]
         CUDA: ['0', '8.0', '11.0', 'NVHPC-22.5']
 
     runs-on: ${{ matrix.os }}
@@ -17,6 +17,13 @@ jobs:
       CUDA_ROOT: '/usr/local/cuda'
 
     steps:
+    - name: Install OneAPI Base-Toolkit 2024.0
+      if: matrix.compiler == 'icx-2024.0'
+      run: |
+        wget -O- https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB | gpg --dearmor | sudo tee /usr/share/keyrings/oneapi-archive-keyring.gpg > /dev/null
+        echo "deb [signed-by=/usr/share/keyrings/oneapi-archive-keyring.gpg] https://apt.repos.intel.com/oneapi all main" | sudo tee /etc/apt/sources.list.d/oneAPI.list
+        sudo apt update
+        sudo apt install intel-basekit
     - name: Install g++-7
       if: matrix.compiler == 'g++-7'
       run: |
