--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -8,8 +8,9 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04]
-        compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10, icx-2024.0]
+        compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
         CUDA: ['0', '8.0', '11.0', 'NVHPC-22.5']
+        ONEAPI: ['0', icx-2024.0]
 
     runs-on: ${{ matrix.os }}
 
@@ -17,13 +18,6 @@ jobs:
       CUDA_ROOT: '/usr/local/cuda'
 
     steps:
-    - name: Install OneAPI Base-Toolkit 2024.0
-      if: matrix.compiler == 'icx-2024.0'
-      run: |
-        wget -O- https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB | gpg --dearmor | sudo tee /usr/share/keyrings/oneapi-archive-keyring.gpg > /dev/null
-        echo "deb [signed-by=/usr/share/keyrings/oneapi-archive-keyring.gpg] https://apt.repos.intel.com/oneapi all main" | sudo tee /etc/apt/sources.list.d/oneAPI.list
-        sudo apt update
-        sudo apt install intel-basekit
     - name: Install g++-7
       if: matrix.compiler == 'g++-7'
       run: |
@@ -67,16 +61,32 @@ jobs:
             tar xpzf nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
             sudo NVHPC_SILENT="true" NVHPC_INSTALL_DIR="$CUDA_ROOT" NVHPC_INSTALL_TYPE="single" ./nvhpc_2022_225_Linux_x86_64_cuda_11.7/install
         esac
+    - name: Install OneAPI Base-Toolkit 2024.0
+      if: matrix.ONEAPI != '0'
+      run: |
+        wget -O- https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB | gpg --dearmor | sudo tee /usr/share/keyrings/oneapi-archive-keyring.gpg > /dev/null
+        echo "deb [signed-by=/usr/share/keyrings/oneapi-archive-keyring.gpg] https://apt.repos.intel.com/oneapi all main" | sudo tee /etc/apt/sources.list.d/oneAPI.list
+        sudo apt update
+        sudo apt install intel-basekit
     - name: Create build directory
       run: |
         mkdir build
     - name: Run CMake configure
-      if: matrix.CUDA == '0'
+      if: matrix.CUDA == '0' && matrix.ONEAPI == '0'
       env:
         CXX: ${{ matrix.compiler }}
       run: |
         cd build
         cmake ..
+    - name: Run CMake configure
+      if: matrix.CUDA == '0' && matrix.ONEAPI !='0'
+      env:
+        CXX: icx
+      run: |
+        . /opt/intel/oneapi/setvars.sh
+        export PATH=/opt/intel/oneapi/compiler/2024.0/bin/icx:${PATH}
+        cd build
+        cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_ONEAPI" ..
     - name: Run CMake configure
       if: matrix.CUDA != '0' && matrix.CUDA != 'NVHPC-22.5'
       env:
@@ -121,7 +131,7 @@ jobs:
         cd build
         strip src/FIRESTARTER_CUDA
     - name: Test FIRESTARTER
-      if: matrix.CUDA == '0'
+      if: matrix.CUDA == '0' && matrix.ONEAPI == '0'
       run: ./build/src/FIRESTARTER -t 1
     - uses: actions/upload-artifact@v2
       if: matrix.compiler == 'clang++-10' && matrix.CUDA == '0'
@@ -133,6 +143,11 @@ jobs:
       with:
         name: FIRESTARTER_CUDA_${{ matrix.CUDA }}-linux
         path: build/src/FIRESTARTER_CUDA
+    - uses: actions/download-artifact@v2
+      if: matrix.ONEAPI != '0' && matrix.CUDA == '0'
+      with:
+        name: FIRESTARTER_ONEAPI-linux
+        path: build/src/FIRESTARTER_ONEAPI
 
   build-windows:
     strategy:
