--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -83,8 +83,7 @@ jobs:
       env:
         CXX: icx
       run: |
-        . /opt/intel/oneapi/setvars.sh
-        export PATH=/opt/intel/oneapi/compiler/2024.0/bin/icx:${PATH}
+        . /opt/intel/oneapi/compiler/2024.0/env/vars.sh
         cd build
         cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_ONEAPI" ..
     - name: Run CMake configure
