--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -8,9 +8,9 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04]
-        compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
-        CUDA: ['0', '8.0', '11.0', 'NVHPC-22.5']
-        ONEAPI: ['0', icx-2024.0]
+        compiler: [g++-10, clang++-10]
+        #CUDA: ['0', '8.0', '11.0', 'NVHPC-22.5']
+        ONEAPI: [icx-2024.0]
 
     runs-on: ${{ matrix.os }}
 
