--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -87,7 +87,7 @@ jobs:
         ls /opt/intel
         ls /opt/intel/oneapi
         ls /opt/intel/oneapi/2024.0
-        . /opt/intel/oneapi/2024.0/env/vars.sh
+        . /opt/intel/oneapi/2024.0/setvars.sh
         cd build
         cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_ONEAPI" ..
     - name: Run CMake configure
