--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -8,7 +8,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04]
-        compiler: [g++-10, clang++-10]
+        compiler: [g++-10]
         #CUDA: ['0', '8.0', '11.0', 'NVHPC-22.5']
         ONEAPI: [icx-2024.0]
 
