--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -114,23 +114,28 @@ jobs:
         cd build
         cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCMAKE_EXE_LINKER_FLAGS=-L"$CUDA_ROOT/$NVARCH/22.5/cuda/11.7/lib64/stubs" -LA ..
     - name: Build
+      if: matrix.ONEAPI =='0'
+      run: |
+        cd build
+        make -j2
+    - name: Build
       if: matrix.ONEAPI !='0'
       run: |
         . /opt/intel/oneapi/2024.0/oneapi-vars.sh
         cd build
         make -j2
-    - name: Build
-      if: matrix.ONEAPI =='0'
-      run: |
-        cd build
-        make -j2
     - name: Strip binary
-      if: matrix.CUDA == '0'
+      if: matrix.CUDA == '0' && matrix.ONEAPI == '0'
       run: |
         cd build
         strip src/FIRESTARTER
     - name: Strip binary
       if: matrix.CUDA != '0'
+      run: |
+        cd build
+        strip src/FIRESTARTER_CUDA
+    - name: Strip binary
+      if: matrix.ONEAPI != '0'
       run: |
         cd build
         strip src/FIRESTARTER_CUDA
