--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -129,7 +129,7 @@ jobs:
       run: |
         . /opt/intel/oneapi/setvars.sh
         cd build
-        cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_ONEAPI" ..
+        make -j2
     - name: Build (OneAPI 2024.0)
       if: matrix.CUDA == '0' && matrix.ONEAPI =='2024.0'
       run: |
