--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -340,7 +340,7 @@ jobs:
         rm -rf FIRESTARTER
         chmod +x FIRESTARTER_CUDA_11.0
     # Linux OneAPI
-    - name: Retrieve FIRESTARTER_CUDA_11.0-linux 
+    - name: Retrieve FIRESTARTER_ONEAPI_2024.0-linux 
       uses: actions/download-artifact@v2
       with:
         name: FIRESTARTER_ONEAPI_2024.0-linux
@@ -350,6 +350,16 @@ jobs:
         mv FIRESTARTER/FIRESTARTER_ONEAPI FIRESTARTER_ONEAPI_2024.0
         rm -rf FIRESTARTER
         chmod +x FIRESTARTER_ONEAPI_2024.0
+    - name: Retrieve FIRESTARTER_ONEAPI_2023.2.0-linux 
+      uses: actions/download-artifact@v2
+      with:
+        name: FIRESTARTER_ONEAPI_2023.2.0-linux
+        path: FIRESTARTER
+    - name: Move binary to right directory
+      run: |
+        mv FIRESTARTER/FIRESTARTER_ONEAPI FIRESTARTER_ONEAPI_2023.2.0
+        rm -rf FIRESTARTER
+        chmod +x FIRESTARTER_ONEAPI_2023.2.0
     # OSX 11.0
     #- name: Retrieve FIRESTARTER-macOS_11.0
     #  uses: actions/download-artifact@v2
@@ -362,6 +372,16 @@ jobs:
     #    rm -rf FIRESTARTER
     #    chmod +x ../FIRESTARTER-macOS_11.0
     # OSX 10.15
+    - name: Retrieve FIRESTARTER-macOS_11
+      uses: actions/download-artifact@v2
+      with:
+        name: FIRESTARTER-macOS_11
+        path: FIRESTARTER
+    - name: Move binary to right directory
+      run: |
+        mv FIRESTARTER/FIRESTARTER FIRESTARTER-macOS_11
+        rm -rf FIRESTARTER
+        chmod +x FIRESTARTER-macOS_11
     - name: Retrieve FIRESTARTER-macOS_12
       uses: actions/download-artifact@v2
       with:
